--- a/proofs/proof19.tex
+++ b/proofs/proof19.tex
@@ -37,9 +37,9 @@
 \textbf{Когда порядки могут быть не изоморфны?} Например, когда:
 
 \hspace{0.5cm}\parbox{15cm} {
-    1. Один порядок имеет максимальный/минимальный элементы, а второй не имеет. Например, поэтому порядки $[0, 1]$ и $(0, 1)$ не изоморфны: первый порядок имеет очевидные минимальный и максимальный элементы, а второй таковых не имеет.
+    1. Один порядок имеет наименьший/наибольший элементы, а второй не имеет. Например, поэтому порядки $[0, 1]$ и $(0, 1)$ не изоморфны: первый порядок имеет очевидные наименьший и наибольший элементы, а второй таковых не имеет.
 
-    2. Порядки в целом имеют разное количество максимальных/минимальных/наименьших/наибольших элементов. Например, покоординатные порядки на $[0, 1]^2$ и $\{(x, y) \in \mathbb{R}^2 | |x| + |y| \le 1\}$ неизоморфны: в порядке $[0, 1]^2$ всего лишь один минимальный элемент (0, 0), а наименьших элементов нет: с другой стороны, в $\{(x, y) \in \mathbb{R}^2 | |x| + |y| \le 1\}$ минимальных элементов нет, а наименьших бесконечно много. Потому данные порядки не изоморфны.
+    2. Порядки в целом имеют разное количество наименьших/наибольших/максимальных/минимальных элементов. Например, покоординатные порядки на $[0, 1]^2$ и $\{(x, y) \in \mathbb{R}^2 | |x| + |y| \le 1\}$ неизоморфны: в порядке $[0, 1]^2$ есть наименьший элемент (0, 0), а минимальных поэтому нет: с другой стороны, в $\{(x, y) \in \mathbb{R}^2 | |x| + |y| \le 1\}$ наименьшего элемента нет, а минимальных бесконечно много. Потому данные порядки не изоморфны.
 
     3. Изоморфизм не порождает изоморфизма отрезков. В частности, отрезок из конечного числа элементов должен соответствовать отрезку из конечного числа элементов. Потому например $\mathbb{Z}$ не изоморфен $\mathbb{Q}$: в первом случае все отрезки конечны, во втором случае все отрезки бесконечны.
 
