--- a/seminars/sem14.tex
+++ b/seminars/sem14.tex
@@ -1,120 +1,137 @@
-\subsection{Семинар 13}
-\textbf{Задача 1}\\
+\documentclass[a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage[russian]{babel}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{csquotes}
+\usepackage{amsmath}
+\usepackage{longtable}
+\usepackage[unicode=true, colorlinks=true, linkcolor=blue, urlcolor=blue]{hyperref}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{graphicx}%Вставка картинок правильная
+\usepackage{float}%Плавающие картинки
+\usepackage{wrapfig}%Обтекание фигур (таблиц, картинок и прочего)
 
-$\Omega = \{1, 2,  3, 4, 5, 6\}$\\
+\newcommand{\F}{\mathbb{F}}
+\renewcommand{\C}{\mathbb{C}}
+\newcommand{\N} {\mathbb{N}}
+\newcommand{\Z} {\mathbb{Z}}
+\newcommand{\R} {\mathbb{R}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\I}{\mathbb{I}}
+\newcommand{\linf}[2]{\lim\limits_{#1 \to #2}}
+\newcommand{\LLim}[2]{\mathop{\underline{\lim}}\limits_{#1 \rightarrow #2}}
+\newcommand{\HLim}[2]{\mathop{\overline{\lim}}\limits_{#1 \rightarrow #2}}
+\newcommand{\supremum}[2]{\sup\limits_{#1 \in #2}}
+\newcommand{\infinum}[2]{\inf\limits_{#1 \in #2}}
+\newcommand{\Sum}[2]{\sum\limits_{#1}^{#2}}
+\newcommand{\task}[1]{\section*{Задание #1}}
+\newcommand{\subtask}[1]{\subsection*{Пункт #1}}
+\renewcommand{\epsilon}{\varepsilon}
 
-$\frac{1}{36} = P(x), \forall x \in \Omega$\\
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{5pt}
+\widowpenalties 1 10000
+\raggedbottom
 
-\begin{equation*}
-\begin{array}{c}
-1 + 4\\
-2+ 3\\
-3 + 2\\
-4 + 1\\    
-\end{array}
-\end{equation*}
+\title{discrete-math-2022-1}
+\author{Цыганов Аскар БПМИ221}
+\date{13 Декабрь, 2022}
 
-$P(A) = \frac{1}{9}$\\
+\begin{document}
+\maketitle
 
-\textbf{Задача 2}\\
+%% тут текст
 
-Монетка выпадает решкой с вероятностью $p$. Пусть $\Omega = \{0, 1\}, P(1) = p, P(0) = 1 -p$ и $\omega = \Omega^6$.
-Тогда если $n$ - кол-во решек, то $P(x_1x_2 ... x_6) = p^n(1 - p)^{6 - n}$. Проверим, что в такой модели сумма вероятностей равна 1.
+\task{1}
 
-\begin{equation*}
-    \sum\limits_{n = 0}^{6} \binom{6}{n} p^n(1 - p)^{6 - n} = (p + (1 - p))^6 = 1^6 = 1
-\end{equation*}
+\begin{enumerate}
+    \item $P(a \mid B) > P(A), A = B$
+    \item $P(a \mid B) < P(A), P(A \cap B) = 0$
+    \item $P(a \mid B) = P(A), A $ и $ B$ - независимые
+\end{enumerate}
 
-Теперь посчитаем вероятность, что выпадет ровно 3 решки. Всего таких исходов $\binom{6}{3}$ и все исходы равновероятны. Тогда
-ответом будет $\binom{6}{3} p^3(1 - p)^{3}$. Подставим $p$ и получим $\frac{5}{16}$.\\
+\task{2}
 
-\textbf{Задача 3}\\
+Построим дерево решений.
 
-$\Omega = \{1, ..., 6\}^3, \forall x \in \Omega \ \ P(x) = \frac{1}{6}$. Введем события $A = \{(x, y, z) \mid (x + y + z) \vdots 2 \}$,
-$B = \{(x, y, z) \mid (x + y + z) \vdots 3 \}$. По формуле включений-исключений:
+$P(\text{2-я монета золотая} \mid \text{1 - золотая}) = P(\text{Обе золотые}) / P(\text{взятая - золотая}) = \frac{1/3}{3/6} = \frac{2}{3}$
 
-\begin{equation*}
-    P(A \cup B) = P(A) + P(B) - P(A \cap B) = \frac{1}{2} + \frac{1}{3} - \frac{1}{6} = \frac{2}{3}
-\end{equation*}
+\task{3}
 
-Докажем, что $P(A) = \frac{1}{2}$. Количество исходов $(x, y, z)$ с четной и нечетной суммой одинаково. Зафиксируем два броска, равновероятно их сумма будет четна или нечетна. Тогда мы равновероятно добавим к ним четное
-или нечетное. Тогда действительно четность равновероятна. Аналогично можно доказать, что $P(B) = \frac{1}{3}$.
+Тут меня вызвали к доске % TODO
 
-И последнее найдем $P(A \cap B)$. Снова аналогичными утверждениями(зафиксировав два числа нам подойдет только одно третье число), значит $P(A \cap B) = \frac{1}{6}$.\\
+\task{4}
 
-\textbf{Задача 4}\\
+Выгодно менять выбор, можно просто в тупую посчитать вероятность.
 
-\textbf{Пункт а}\\
+\task{5}
 
-Колода из 36 карт - перестановка длины 36. Пусть 1-9 - первая масть, ..., 28 - 36 - четвертая масть. Данное пространство равновероятно, поэтому
-$P(g) = \frac{1}{36!}$. Будем считать, что первому достались числа на позициях 1-9 и аналогично для остальных. Можно распределить масти по людям
-$4!$ способами, внутри масти их можно перемещать $9!$ способами и так в каждом. Значит $P(A) = \frac{4! \cdot (9!)^4}{36!}$.\\
-
-\textbf{Пункт б}\\
-
-Возьмем неупорядоченное вероятностное пространство. $P(g) = \frac{(9!)^4}{36!}$. Всего есть $4!$ способов поставить людям королей. Мы уже расположили королей
-и осталось раздать по 8 карт, всего способов так сделать $\frac{32!}{(8!)^4}$. В итоге получится
-
-\begin{equation*}
-    \frac{4! \frac{32!}{(8!)^4}}{ \frac{(9!)^4}{36!}} = \frac{4! (9!)^4 32!}{36!(8!)^4} = \frac{4! 9^4}{36 \cdot 35 \cdot 34 \cdot 33}
-\end{equation*}
-
-\textbf{Задача 5}\\
-
-\textbf{Пункт а}\\
-
-$\Omega = \{1, 2, ..., 10\}, P(\omega) = \frac{1}{10}$. Очевидно, тогда ответ $\frac{1}{10}$.\\
-
-\textbf{Пункт б}\\
-
-$\Omega = S_{10}$. Построим дерево, на первом слое будет вероятность $\frac{1}{10}$, на втором слое будет $\frac{1}{9}$ и тд. Заметим, что на каждом слое
-сумма будет 1. В листах будет задана какая-то перестановка билетов. Листов будет в точности $10!$, тогда $P(\omega) = \frac{1}{10!}$. Всего благоприятных исходов
-с выученным билетом в конце очевидно будет $9!$. Тогда $P(A) = \frac{9!}{10!} = \frac{1}{10}$.\\
-
-\textbf{Задача 6}\\
-
-$\Omega = \{(1, i_1, ..., i_k) \mid 1 < i_1 < ... < i_k, k \geq 0\}$
+A - картное 2, B - кратное 3
 
 \begin{equation*}
-    \begin{array}{ccccccc}
-        1 & \overbrace{2 ...}^{id} & i_1 &\overbrace{...}^{id} & i_2 &\overbrace{...}^{id}&i_k\\
-        \downarrow  & \downarrow &\downarrow & \downarrow & \downarrow& \downarrow & \downarrow\\
-        i_1 & 2   ... & i_2 & ... & i_3 & ... & 1\\
-    \end{array}
+    P(A) = \frac{1}{2}, P(B) = \frac{1}{3}, P(A \cap B) = \frac{1}{6} = P(A) \cdot P(B)
 \end{equation*}
 
-Получили цикл $(1, i_1, i_2, ..., i_k)$. $P((1, i_1, i_2, ..., i_k)) = \frac{1}{100} \cdot \frac{1}{101 - i_1} \cdot \frac{1}{101 - i_2} \cdot \dots \cdot \frac{1}{101 - i_k}$.
+\task{6}
 
-Теперь докажем, что сумма вероятностей равна 1.
+1) В силу симметри, можно построить биекцию просто поменять местами два элемента
+$$P(x_{24} > x_{25}) = \frac{1}{2}, P(x_{25} > x_{26}) = \frac{1}{2}$$
+
+Зафиксируем все, кроме 24, 25 и 26 элементов. Нам будет подходить только 1 случай из 6.
+
+$$P(x_{24} > x_{25} > x_{26}) = \frac{1}{6} \neq P(x_{24} > x_{25}) \cdot P(x_{25} > x_{26})$$
+
+2) Пусть A - $x_{24}$ больше всех последующих, B - $x_{25}$ больше всех последующих.
+
+Посчитаем $P(A)$ забьем на первые 23 элемента. Всего расставить в тех 23 расставить числа
+можно $\binom{49}{23} \cdot 23! = \frac{49!}{26!}$ способами. Выберем максимальный и расставим остальные 25! способами.
+
+Тогда $P(A) = \frac{1}{26}$, аналогично $P(B) = \frac{1}{25}$.
+
+Но $P(A \cap B)$, аналогичными рассуждениями забьем на первые 23 их расставить можно
+$\frac{49!}{26!}$ способами, выбираем два наибольших и расставляем остальные $24!$ способами.
+
+Значит $P(A \cap B) = \frac{49! \cdot 24!}{26! \cdot 26!} = \frac{1}{25 \cdot 26} = P(A) \cdot P(B)$,
+тогда $A, B$ - независимые.
+
+\task{7}
+
+Пусть A - первое событие, а B - второе.
+
+$$P(A) = \frac{\binom{10}{5} \cdot 5!}{10^5} = \frac{10 \cdot 9 \cdot 8 \cdot 7 \cdot 6}{10^5} > \frac{1}{2^5}$$
+
+Из-за независимости:
+
+$$P(B) = \frac{1}{2^5}$$
+
+Значит первое вероятнее
+
+\task{8}
 
 \begin{equation*}
-    \frac{s}{100} = \sum\limits_{k = 0}^{99} \sum\limits_{1 < i_1 <...<i_k} \frac{1}{100} \cdot \frac{1}{101 - i_1} \cdot \frac{1}{101 - i_2} \cdot \dots \cdot \frac{1}{101 - i_k} = 1
+    P(A \mid B) = 1 - P(\hat{A} \mid B)
 \end{equation*}
 
 \begin{equation*}
-    s = \sum\limits_{a_1 < ... < a_k < 100} \frac{1}{a_1} \cdot ... \cdot \frac{1}{a_k}
+    P(A \mid \hat{B}) = \frac{P(\hat{B} \mid A) \cdot P(A)}{P(\hat{B})} = \frac{(1 - P(B \mid A)) \cdot P(A)}{1 - P(B)}
 \end{equation*}
 
-\begin{equation*}
-    s = (1 + \frac{1}{1}) (1 + \frac{1}{2})...(1 + \frac{1}{99}) = 2 \cdot \frac{3}{2} \cdot \frac{4}{3} \cdot ... \cdot \frac{100}{99} = 100
-\end{equation*}
+Мы выразили $P(A \mid \hat{B})$, остальные аналогично выражаем
 
-$A = \{(1, i_1, i_2, ..., i_k) \mid i_k \neq 100, k \geq 100\} \subseteq \Omega$. Построим биекцию из плохих исходов в хорошие. Уберем последний элемент 100 и теперь
-$i_k = 100$, там можно поставить либо 0, либо 1, значит плохие исходы и хорошие равновероятны. Значит $P(A) = 1 - P(A) \Rightarrow P(A) = \frac{1}{2}$.\\
+\task{9}
 
-\textbf{Задача 8}\\
+Если $A_1, A_2, ..., A_n$ - независимы в совокупности, то $\hat{A_1}, A_2, ..., A_n$ - тоже
+независимы в совокупности. Возьмем $P(\hat{A_1} \cap A_{i_1} \cap ... \cap A_{i_k})$.
 
-Пусть $a_n$ - за $n$ ходов, не запачкавшись вернулись в $A$. Аналогично введем $b_n, c_n, f_n = b_n, e_n = c_n$.
-$b_n = \frac{a_{n -1} + c_{n - 1}}{2}, c_n = \frac{b_{n - 1}}{2}, a_n = b_n - 1 \Rightarrow$\\
+Пусть $B = A_{i_1} \cap ... \cap A_{i_k}$.
 
-$b_n = \frac{3b_{n - 2}}{4}$, но $b_1 = \frac{1}{2}, b_2 = 0$, тогда.
+Докажем, что $P(\hat{A_1} \cap B) = P(\hat{A_1}) \cdot P(B) = (1 - P(A_1)) \cdot P(B)$
 
-\begin{equation*}
-    b_n =
-    \begin{cases}
-        \left(\frac{3}{4}\right)^{\frac{n - 1}{2}} \cdot \frac{1}{2}, b - \text{нечетно}\\
-        0, \text{иначе}
-    \end{cases}
-\end{equation*}
+$$P(\hat{A_1} \cap B) = P(B) - P(A_1 \cap B) = P(B) - P(A_1) \cdot P(B) = (1 - P(A_1)) \cdot P(B)$$
 
-Далее легко посчитать
+Чтд
+
+
+%%%
+\end{document}
